--- a/style.css
+++ b/style.css
@@ -1,67 +1,120 @@
+*
+{
+    margin: 0%;
+    padding: 0%;
+}
+
+html
+{
+    font-size: 62.5%;
+}
+
 body {
-    margin: 0;
-    background-color: #AB88FF;
+    background-image: linear-gradient(to right, #ff0844 0%, #ffb199 100%);
     font-family: 'Yusei Magic', sans-serif;
+    margin: 0;
 }
 
 .header {
-    width: 100;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-
+    display: flex;
+    height: 80px;
+    justify-content: space-between;
+    width: 100;    
 }
 
 .header__img {
-    width: 200px;
     margin: 10px;
+    width: 200px;
 }
 
 .header__menu
 {
     margin-right: 30px;
 }
+
 .header__menu ul{
     display: none;
     list-style: none;
+    margin:0px 0px 0px -14px;
     padding: 0px;
     position: absolute;
-    width: 100px;
     text-align: right;
-    margin:0px 0px 0px -14px;
+    width: 100px;
     width: auto;
 }
+
 .header__menu:hover ul, ul:hover{
     display: block;
 }
+
 .header__menu li{
     margin: 10px 0px;
-   
 }
+
 .header__menu li a{
     color: white;
     text-decoration: none;
 }
+
 .header__menu li a:hover
 {
     text-decoration: underline;
 }
+
 .header__menu-profile
 {
-    display: flex;
-    margin-right: 8px;
     align-items: center;
     cursor: pointer;
+    display: flex;
+    font-size: 1.8rem;
+    margin-right: 8px;  
 }
 .header__menu-profile img
 {
+    height: 40px;
     margin-right: 8px;
     width: 40px;
-    height: 40px;
 }
+
 .header__menu-profile p
 {
+    color: white;
     margin: 0px;
+}
+
+.header__menu-deploy
+{
+    font-size: 1.6rem;
+}
+
+main
+{
+    height: 300px;
+}
+
+.main__title
+{
+    color: white;
+    font-size: 3rem;
+}
+
+.input
+{
+    background-color: rgba(255,255,255 ,0.1);
+    border: 2px solid white;
+    border-radius: 50px;
+    color: white;
+    font-family: 'Yusei Magic', sans-serif;
+    font-size: 1.6rem;
+    height: 50px;
+    outline: none;
+    padding-left: 25px;
+    width: 60%;
+    
+}
+
+::placeholder
+{
     color: white;
 }
